# nachfrage

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nachfrage/: __init__.py  analysis.py  decision.py  models.py  plot.py  posterior.py
tests/: conftest.py  test_analysis.py  test_decision.py  test_models.py  test_plot.py  test_posterior.py
