[project]
name = "nachfrage"
version = "0.1.0"
description = "Bayesian demand modeling and newsvendor inventory optimization for small-batch producers."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Will Dean", email = "will@germanbakingasheville.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pymc>=6.0.0",
    "pymc-extras>=0.1.0",
    "xarray>=2024.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "arviz>=0.20.0",
]
keywords = [
    "bayesian",
    "demand",
    "newsvendor",
    "inventory",
    "optimization",
    "pymc",
    "forecasting",
    "supply-chain",
    "production-planning",
    "small-batch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
plot = [
    "arviz-plots[matplotlib]>=0.1.0",
    "matplotlib>=3.9.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.urls]
Repository = "https://github.com/3pm-baking/nachfrage"
Issues = "https://github.com/3pm-baking/nachfrage/issues"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nachfrage"]

[tool.uv]
package = true

[dependency-groups]
plot = ["arviz-plots[matplotlib]>=0.1.0", "matplotlib>=3.9.0"]
dev = ["pytest>=8.0.0", "ruff>=0.5.0", "nutpie>=0.14.0", "h5netcdf>=1.0.0", "h5py>=3.0.0"]

[tool.ruff.lint]
select = ["E", "F", "I", "D", "UP", "B", "C4", "SIM"]
ignore = ["D105", "D107", "D203", "D212", "D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "E501"]

[tool.coverage.run]
source = ["src/nachfrage"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "def __repr__",
    "class .*\\bProtocol\\):",
    "raise NotImplementedError",
]
